Refatore a estrutura do código para melhorar a legibilidade e a manutenção

--- a/index.html
+++ b/index.html
@@ -290,6 +290,32 @@
 
                 <div class="project-card fade-in">
                     <div class="project-image">
+                        <img src="Projeto/Dashboard Financeiro.png" alt="projeto em construção">
+                    </div>
+                    <div class="project-info">
+                        <h3>Sistema Financeiro</h3>
+                        <p>O Sistema Financeiro é uma aplicação web desenvolvida para auxiliar no controle e organização
+                            das finanças pessoais ou empresariais. Ele oferece um painel intuitivo onde o usuário pode
+                            registrar receitas e despesas, acompanhar saldos, visualizar relatórios e analisar
+                            indicadores financeiros de forma clara e prática.</p>
+                        <div class="project-tech">
+                            <span class="tech-tag">Docker</span>
+                            <span class="tech-tag">JavaScript</span>
+                            <span class="tech-tag">C#</span>
+                            <span class="tech-tag">React</span>
+                            <span class="tech-tag">Vite</span>
+                            <span class="tech-tag">CSS</span>
+                        </div>
+                        <div class="project-links">
+                            <a href="https://financeiro-front-plum.vercel.app" target="_blank"><i
+                                    class="fas fa-globe"></i> Visualizar</a>
+                            <a href="https://github.com/Gustavocl22/Financeiro-app" target="_blank"><i
+                                    class="fab fa-github"></i> Código</a>
+                        </div>
+                    </div>
+                </div>
+                 <div class="project-card fade-in">
+                    <div class="project-image">
                         <img src="Projeto/Construcao.png" alt="projeto em construção">
                     </div>
                     <div class="project-info">
@@ -308,7 +334,6 @@
                             <a href="#project"><i class="fab fa-github"></i> Código</a>
                         </div>
                     </div>
-                </div>
             </div>
         </div>
     </section>
